# rvdbt

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
dbt/: CMakeLists.txt  aot.cpp  aot.h  arena.cpp  arena.h  arena_objects.h  bitfield.h  common.h  config.h  core.cpp  core.h  elfaot.cpp  elfrun.cpp  execute.cpp  execute.h  logger.cpp  logger.h  mmu.cpp  mmu.h  regalloc.cpp  regalloc.h  runelf.cpp  rv32i_build.cpp  rv32i_decode.cpp  rv32i_decode.h  rv32i_interp.cpp  rv32i_ops.h  rv32i_runtime.h  tests.cpp  tests.txt  translate.cpp  translate.h  ukernel.cpp  ukernel.h  ukernel_syscalls.h
dbt/aot/: aot.cpp  aot.h  aot_boot.cpp  aot_file.cpp  aot_module.cpp  aot_module.h  llvmaot.cpp  llvmaot_stackmaps.cpp
dbt/guest/: rv32_analyser.cpp  rv32_analyser.h  rv32_cpu.h  rv32_decode.cpp  rv32_decode.h  rv32_insn.cpp  rv32_insn.h  rv32_interp.cpp  rv32_ops.h  rv32_qir.cpp  rv32_qir.h  rv32_qjit.cpp  rv32_qjit.h  rv32_runtime.h  rv32_stubs.h
dbt/qjit/: ilist.h  qcg.cpp  qcg.h  qcompile.cpp  qcompile.h  qemit.cpp  qir.cpp  qir.h  qir_builder.h  qir_ops.h  qir_opt.cpp  qir_opt.h  qir_printer.cpp  qir_printer.h  qjit.cpp  qjit.h  qjit_stubs.cpp  qjit_stubs.h  qra.cpp  regalloc.cpp  regalloc.h  runtime_stubs.cpp
dbt/qjit/qcg/: arch_traits.cpp  arch_traits.h  asmjit_deps.h  jitabi.cpp  jitabi.h  qcg.cpp  qcg.h  qemit.cpp  qemit.h  qra.cpp  qsel.cpp
dbt/qmc/: compile.cpp  compile.h  ilist.h  marker.h  qir.cpp  qir.h  qir_builder.h  qir_opt.cpp  qir_opt.h  qir_printer.cpp  qir_printer.h  runtime_stubs.cpp  runtime_stubs.h
dbt/qmc/llvmgen/: llvmgen.cpp  llvmgen.h
dbt/qmc/qcg/: arch_traits.cpp  arch_traits.h  jitabi.cpp  jitabi.h  jitabi_shared.cpp  qcg.cpp  qcg.h  qemit.cpp  qemit.h  qra.cpp  qsel.cpp
dbt/tcache/: aot_cache.cpp  aot_cache.h  cflow_dump.h  objprof.cpp  objprof.h  tcache.cpp  tcache.h
dbt/util/: allocator.h  bitfield.h  common.cpp  common.h  fsmanager.cpp  fsmanager.h  logger.cpp  logger.h
docs/: rvdbt.md
examples/: benchmarks.py  hello.c  pi_double.c  timer.c  uklibc.h  uklibc_host.h
examples/demokernel/: minimal.c  uklibc.h  uklibc_host.h
examples/no_libc/: pi.c  tests.txt
